# opmon

./: .gitignore  CMakeLists.txt  CMakelists.txt
assets/data/: characters.json  items.json  locations.json
src/: main.cpp
src/characters/: Character.cpp  Character.h  CharacterFactory.cpp  CharacterFactory.h  CrewMember.cpp  CrewMember.h  DevilFruit.cpp  DevilFruit.h  Stats.cpp  Stats.h
src/core/: Application.cpp  Application.h  AudioManager.cpp  AudioManager.h  ConfigManager.cpp  ConfigManager.h  Game.cpp  InputManager.cpp  InputManager.h  Logger.cpp  Logger.h  Scene.h  main.cpp
src/game/: BattleSystem.cpp  BattleSystem.h  EventSystem.cpp  EventSystem.h  GameStateManager.cpp  GameStateManager.h  Item.h  Location.h  Quest.cpp  World.h
src/graphics/: AnimatedSprite.cpp  AnimatedSprite.h  Animation.cpp  Animation.h  Button.cpp  Button.h  Camera.cpp  Camera.h  FontManager.cpp  FontManager.h  Particle.cpp  Particle.h  ParticleSystem.cpp  ParticleSystem.h  RenderSystem.cpp  RenderSystem.h  TextureManager.cpp  TextureManager.h  UIElement.cpp  UIElement.h
src/scenes/: AchievementScene.cpp  AchievementScene.h  BattleScene.cpp  BattleScene.h  CharacterStatusScene.cpp  CharacterStatusScene.h  CutsceneScene.cpp  CutsceneScene.h  DialogueScene.cpp  DialogueScene.h  GameWorldScene.cpp  GameWorldScene.h  InventoryScene.cpp  InventoryScene.h  LoadGameScene.cpp  LoadGameScene.h  MainMenuScene.cpp  MainMenuScene.h  NewGameScene.cpp  NewGameScene.h  PauseMenuScene.cpp  PauseMenuScene.h  SettingsScene.cpp  SettingsScene.h  ShopScene.cpp  ShopScene.h  StatisticsScene.h
(+3 files in other folders)
